// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSortBy should render 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by nav"
  role={null}
>
  <li
    className="theme-sort-by-items dropdown"
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Change sort criteria. Current sort by Id."
      className="dropdown-toggle"
      href="#"
      id="42"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Id
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby="42"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Id as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Name as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
  <li
    onSelect={null}
  >
    <button
      aria-label="Change sort order. Current order: Ascending."
      className="theme-tc-list-toolbar-order-chooser tc-list-toolbar-order-chooser btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-talend-sort-asc"
        focusable="false"
        name="talend-sort-asc"
      />
      <svg
        aria-hidden="true"
        className="sc-EHOje iyUYnG tc-svg-icon tc-list-toolbar-order-indicator theme-tc-list-toolbar-order-indicator rotate-180 tc-icon-name-talend-caret-down"
        focusable="false"
        name="talend-caret-down"
      />
    </button>
  </li>
</ul>
`;

exports[`SelectSortBy should render id if provided 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by nav"
  role={null}
>
  <li
    className="theme-sort-by-items dropdown"
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Change sort criteria. Current sort by Id."
      className="dropdown-toggle"
      href="#"
      id="toolbar-sort-by"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Id
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby="toolbar-sort-by"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Id as current sort criteria."
          href="#"
          id="toolbar-sort-by-item-id"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Name as current sort criteria."
          href="#"
          id="toolbar-sort-by-item-name"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
  <li
    onSelect={null}
  >
    <button
      aria-label="Change sort order. Current order: Ascending."
      className="theme-tc-list-toolbar-order-chooser tc-list-toolbar-order-chooser btn btn-link"
      disabled={false}
      id="toolbar-sort-order-chooser"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-talend-sort-asc"
        focusable="false"
        name="talend-sort-asc"
      />
      <svg
        aria-hidden="true"
        className="sc-EHOje iyUYnG tc-svg-icon tc-list-toolbar-order-indicator theme-tc-list-toolbar-order-indicator rotate-180 tc-icon-name-talend-caret-down"
        focusable="false"
        name="talend-caret-down"
      />
    </button>
  </li>
</ul>
`;

exports[`SelectSortBy should render with no dropdown 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by nav"
  role={null}
>
  <li
    className="navbar-text"
    onSelect={null}
  >
    Id
  </li>
  <li
    onSelect={null}
  >
    <button
      aria-label="Change sort order. Current order: Ascending."
      className="theme-tc-list-toolbar-order-chooser tc-list-toolbar-order-chooser btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-talend-sort-asc"
        focusable="false"
        name="talend-sort-asc"
      />
      <svg
        aria-hidden="true"
        className="sc-EHOje iyUYnG tc-svg-icon tc-list-toolbar-order-indicator theme-tc-list-toolbar-order-indicator rotate-180 tc-icon-name-talend-caret-down"
        focusable="false"
        name="talend-caret-down"
      />
    </button>
  </li>
</ul>
`;

exports[`SelectSortBy should render without field selected 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by nav"
  role={null}
>
  <li
    className="theme-sort-by-items dropdown"
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Change sort criteria. Current sort by N.C."
      className="dropdown-toggle"
      href="#"
      id="42"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      N.C
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby="42"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Id as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Name as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
